Remove dependency on commons-io (#1028)
Signed-off-by: Wouter Born <github@maindrain.net>